--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -40,9 +40,9 @@ jobs:
           RT_HELM_CHART_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f2 -d " ")
           ARTIFACTORY_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f3 -d " ")
           echo "rt_version=$ARTIFACTORY_VERSION" >> "$GITHUB_OUTPUT"
-          XRAY_HELM_CHART_VERSION=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f2 -d " ")
+          XRAY_HELM_CHART_VERSION=${XRAY_HELM_CHART_VERSION:=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f2 -d " ")}
           XRAY_VERSION=${XRAY_VERSION:=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f3 -d " ")}
-          echo "XRAY_VERSION=$XRAY_VERSION" >> "$GITHUB_ENV"
+          echo "XRAY_HELM_CHART_VERSION=$XRAY_HELM_CHART_VERSION" >> "$GITHUB_ENV"
           echo "xray_version=$XRAY_VERSION" >> "$GITHUB_OUTPUT"
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
@@ -128,7 +128,7 @@ jobs:
         id: install_xray
         run: |
           helm upgrade --install xray jfrog/xray \
-            --version $XRAY_VERSION
+            --version $XRAY_HELM_CHART_VERSION
             --set postgresql.persistence.size=200Gi \
             --set xray.jfrogUrl=http://artifactory-artifactory-nginx \
             --set xray.masterKey=$MASTER_KEY \
