--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: '1.22.7'
       - name: Install Terraform CLI
         uses: hashicorp/setup-terraform@v3
         if: ${{ matrix.cli == 'terraform' }}
