--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,7 +16,7 @@ builds:
   flags:
     - -trimpath
   ldflags:
-    - '-s -w -X github.com/jfrog/terraform-provider-xray/pkg/xray/provider.Version={{.Version}}'
+    - '-s -w -X github.com/jfrog/terraform-provider-xray/v{{.Major}}/pkg/xray/provider.Version={{.Version}}'
   goos:
     - freebsd
     - windows
