--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -39,6 +39,7 @@ jobs:
           helm repo add jfrog https://charts.jfrog.io/
           helm repo update
           RT_HELM_CHART_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f2 -d " ")
+          echo "RT_HELM_CHART_VERSION=$RT_HELM_CHART_VERSION" >> "$GITHUB_ENV"
           ARTIFACTORY_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f3 -d " ")
           echo "rt_version=$ARTIFACTORY_VERSION" >> "$GITHUB_OUTPUT"
           XRAY_HELM_CHART_VERSION=${XRAY_HELM_CHART_VERSION:=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f2 -d " ")}
@@ -100,6 +101,7 @@ jobs:
           echo "::add-mask::$JOIN_KEY"
           echo "JOIN_KEY=$JOIN_KEY" >> "$GITHUB_ENV"
           helm upgrade --install artifactory jfrog/artifactory \
+            --version $RT_HELM_CHART_VERSION \
             --set artifactory.masterKey=$MASTER_KEY \
             --set artifactory.joinKey=$JOIN_KEY \
             --set artifactory.license.secret=artifactory-license \
