--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -144,7 +144,8 @@ jobs:
             --set xray.masterKey=$MASTER_KEY \
             --set xray.joinKey=$JOIN_KEY \
             --set xray.serviceAccount.create=true \
-            --set xray.rbac.create=true
+            --set xray.rbac.create=true \
+            --set rabbitmq.auth.password=${{ secrets.RABBITMQ_AUTH_PASSWORD }}
           kubectl rollout status statefulset/xray-postgresql
           kubectl rollout status statefulset/xray-rabbitmq
           kubectl rollout status statefulset/xray
