Added support for catalog labels, package and packageversion assignments - crud operations

--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -19,8 +19,10 @@ jobs:
       matrix:
         cli: [terraform, tofu]
     outputs:
+      platform_version: ${{ steps.get_versions.outputs.platform_version }}
       artifactory_version: ${{ steps.get_versions.outputs.rt_version }}
       xray_version: ${{ steps.get_versions.outputs.xray_version }}
+      catalog_version: ${{ steps.get_versions.outputs.catalog_version }}
       tf_version: ${{ steps.get_terraform_cli_version.outputs.version }}
       tofu_version: ${{ steps.get_opentofu_cli_version.outputs.version }}
     steps:
@@ -30,22 +32,97 @@ jobs:
         run: git fetch --prune --unshallow
       - name: Install Helm
         uses: azure/setup-helm@v4.2.0
-      - name: Get Artifactory and Xray versions
+      - name: Get JFrog Platform component versions
         id: get_versions
         env:
-          XRAY_HELM_CHART_VERSION: ${{ vars.XRAY_HELM_CHART_VERSION }}
-          XRAY_VERSION: ${{ vars.XRAY_VERSION }}
+          PLATFORM_HELM_CHART_VERSION: ${{ vars.PLATFORM_HELM_CHART_VERSION }}
         run: |
+          # This step fetches the latest individual component chart versions and 
+          # modifies the JFrog Platform Chart.yaml to use those latest versions
+          # before installation. This ensures we test with the most recent components.
           helm repo add jfrog https://charts.jfrog.io/
           helm repo update
-          RT_HELM_CHART_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f2 -d " ")
-          echo "RT_HELM_CHART_VERSION=$RT_HELM_CHART_VERSION" >> "$GITHUB_ENV"
-          ARTIFACTORY_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f3 -d " ")
+          PLATFORM_HELM_CHART_VERSION=${PLATFORM_HELM_CHART_VERSION:=$(helm search repo | grep "jfrog/jfrog-platform " | awk '{$1=$1};1' | cut -f2 -d " ")}
+          echo "PLATFORM_HELM_CHART_VERSION=$PLATFORM_HELM_CHART_VERSION" >> "$GITHUB_ENV"
+          
+          # Get platform chart app version
+          PLATFORM_VERSION=$(helm search repo | grep "jfrog/jfrog-platform " | awk '{$1=$1};1' | cut -f2 -d " ")
+          echo "Platform version: $PLATFORM_VERSION"
+          
+          # Fetch latest component versions from individual charts with override support
+          echo "Fetching latest component chart versions..."
+          
+          # Get latest Artifactory chart version
+          LATEST_ARTIFACTORY_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f2 -d " " | head -1)
+          echo "Latest Artifactory chart version: $LATEST_ARTIFACTORY_VERSION"
+          
+          # Get latest Xray chart version with override support
+          XRAY_VERSION_OVERRIDE=${XRAY_VERSION}
+          LATEST_XRAY_VERSION=$(helm search repo | grep "jfrog/xray " | awk '{$1=$1};1' | cut -f2 -d " " | head -1)
+          LATEST_XRAY_VERSION=${XRAY_VERSION_OVERRIDE:-$LATEST_XRAY_VERSION}
+          echo "Latest Xray chart version: $LATEST_XRAY_VERSION"
+          
+          # Get latest Catalog chart version with override support
+          CATALOG_VERSION_OVERRIDE=${CATALOG_VERSION}
+          LATEST_CATALOG_VERSION=$(helm search repo | grep "jfrog/catalog " | awk '{$1=$1};1' | cut -f2 -d " " | head -1)
+          LATEST_CATALOG_VERSION=${CATALOG_VERSION_OVERRIDE:-$LATEST_CATALOG_VERSION}
+          echo "Latest Catalog chart version: $LATEST_CATALOG_VERSION"
+          
+          # Download platform chart and modify Chart.yaml with latest component versions
+          echo "Downloading and modifying JFrog Platform chart..."
+          helm pull jfrog/jfrog-platform --version $PLATFORM_HELM_CHART_VERSION --untar --untardir /tmp/
+          
+          # Backup original Chart.yaml
+          cp /tmp/jfrog-platform/Chart.yaml /tmp/jfrog-platform/Chart.yaml.orig
+          
+          echo "Original Chart.yaml dependencies:"
+          grep -A 50 "dependencies:" /tmp/jfrog-platform/Chart.yaml.orig || echo "No dependencies section found"
+          echo "---"
+          
+          # Update component versions in Chart.yaml
+          echo "Updating component versions in Chart.yaml..."
+          
+          # Update Artifactory version
+          sed -i "/- name: artifactory/,/version:/ s/version: .*/version: \"$LATEST_ARTIFACTORY_VERSION\"/" /tmp/jfrog-platform/Chart.yaml
+          
+          # Update Xray version  
+          sed -i "/- name: xray/,/version:/ s/version: .*/version: \"$LATEST_XRAY_VERSION\"/" /tmp/jfrog-platform/Chart.yaml
+          
+          # Update Catalog version
+          sed -i "/- name: catalog/,/version:/ s/version: .*/version: \"$LATEST_CATALOG_VERSION\"/" /tmp/jfrog-platform/Chart.yaml
+          
+          echo "Updated Chart.yaml dependencies:"
+          grep -A 50 "dependencies:" /tmp/jfrog-platform/Chart.yaml || echo "No dependencies section found"
+          echo "---"
+          
+          # Update dependencies to fetch the latest component charts
+          echo "Updating chart dependencies..."
+          cd /tmp/jfrog-platform
+          helm dependency update
+          cd -
+          
+          # Store the modified chart path for later use
+          echo "MODIFIED_PLATFORM_CHART_PATH=/tmp/jfrog-platform" >> "$GITHUB_ENV"
+          
+          # Get app versions for the components for reporting
+          ARTIFACTORY_VERSION=$(helm search repo | grep "jfrog/artifactory " | awk '{$1=$1};1' | cut -f3 -d " " | head -1)
+          XRAY_APP_VERSION=$(helm search repo | grep "jfrog/xray " | awk '{$1=$1};1' | cut -f3 -d " " | head -1)
+          CATALOG_APP_VERSION=$(helm search repo | grep "jfrog/catalog " | awk '{$1=$1};1' | cut -f3 -d " " | head -1)
+          
+          # Use override values if they contain app versions, otherwise use extracted ones
+          XRAY_VERSION=${XRAY_VERSION_OVERRIDE:-$XRAY_APP_VERSION}
+          CATALOG_VERSION=${CATALOG_VERSION_OVERRIDE:-$CATALOG_APP_VERSION}
+          
+          echo "Component versions being used (chart version -> app version):"
+          echo "  Artifactory: $LATEST_ARTIFACTORY_VERSION -> $ARTIFACTORY_VERSION"
+          echo "  Xray: $LATEST_XRAY_VERSION -> $XRAY_VERSION"
+          echo "  Catalog: $LATEST_CATALOG_VERSION -> $CATALOG_VERSION"
+          
+          # Set outputs for use in other jobs
+          echo "platform_version=$PLATFORM_VERSION" >> "$GITHUB_OUTPUT"
           echo "rt_version=$ARTIFACTORY_VERSION" >> "$GITHUB_OUTPUT"
-          XRAY_HELM_CHART_VERSION=${XRAY_HELM_CHART_VERSION:=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f2 -d " ")}
-          XRAY_VERSION=${XRAY_VERSION:=$(helm search repo | grep "jfrog/xray" | awk '{$1=$1};1' | cut -f3 -d " ")}
-          echo "XRAY_HELM_CHART_VERSION=$XRAY_HELM_CHART_VERSION" >> "$GITHUB_ENV"
           echo "xray_version=$XRAY_VERSION" >> "$GITHUB_OUTPUT"
+          echo "catalog_version=$CATALOG_VERSION" >> "$GITHUB_OUTPUT"
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -66,7 +143,7 @@ jobs:
         run: |
           export GKE_CLUSTER=tf-provider-xray-${{ matrix.cli }}-$(date +%s)
           echo "GKE_CLUSTER=$GKE_CLUSTER" >> "$GITHUB_ENV"
-          echo "Whitelist Pipelines Node CIDR to be able to run Artifactory and Xray tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
+          echo "Whitelist Pipelines Node CIDR to be able to run JFrog Platform tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
           export WHITELIST_CIDR=$(curl -s ifconfig.me)/32
           echo "WHITELIST_CIDR=$WHITELIST_CIDR" >> "$GITHUB_ENV"
           echo "Creating GKE cluster ${GKE_CLUSTER} using default authentication"
@@ -86,37 +163,49 @@ jobs:
             # --master-authorized-networks "$WHITELIST_CIDR"
             # add your NAT CIDR to whitelist local or CI/CD NAT IP. Set WHITELIST_CIDR in CI/CD to add CIDR to the list automatically.
           gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE" --project "$GKE_PROJECT"
-      - name: Install Artifactory
-        id: install_artifactory
+      - name: Install JFrog Platform
+        id: install_platform
         env:
-          ARTIFACTORY_LICENSE: ${{ secrets.ARTIFACTORY_LICENSE }}
+          PLATFORM_LICENSE: ${{ secrets.PLATFORM_LICENSE }}
         run: |
-          echo "Creating Artifactory License Secret"
-          echo $ARTIFACTORY_LICENSE > ${{ runner.temp }}/artifactory.cluster.license
-          kubectl create secret generic artifactory-license --from-file=${{ runner.temp }}/artifactory.cluster.license
+          echo "Creating JFrog Platform License Secret"
+          echo $PLATFORM_LICENSE > ${{ runner.temp }}/platform.cluster.license
+          kubectl create secret generic platform-license --from-file=${{ runner.temp }}/platform.cluster.license
           MASTER_KEY=$(openssl rand -hex 32)
           echo "::add-mask::$MASTER_KEY"
           echo "MASTER_KEY=$MASTER_KEY" >> "$GITHUB_ENV"
           JOIN_KEY=$(openssl rand -hex 32)
           echo "::add-mask::$JOIN_KEY"
           echo "JOIN_KEY=$JOIN_KEY" >> "$GITHUB_ENV"
-          helm upgrade --install artifactory jfrog/artifactory \
-            --version $RT_HELM_CHART_VERSION \
-            --set artifactory.masterKey=$MASTER_KEY \
-            --set artifactory.joinKey=$JOIN_KEY \
-            --set artifactory.license.secret=artifactory-license \
-            --set artifactory.license.dataKey=artifactory.cluster.license \
-            --set artifactory.persistence.size=50Gi \
-            --set nginx.service.ssloffload=true \
-            --set postgresql.primary.persistence.size=50Gi
-            # --set nginx.service.loadBalancerSourceRanges="{$WHITELIST_CIDR}" \
-          echo "Waiting for Artifactory roll out"
-          kubectl rollout status deployment/artifactory-artifactory-nginx
-          kubectl rollout status statefulset/artifactory
-          SERVICE_IP=$(kubectl get svc --namespace default artifactory-artifactory-nginx -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          # Package the modified platform chart
+          echo "Packaging modified platform chart..."
+          helm package $MODIFIED_PLATFORM_CHART_PATH -d /tmp/
+          MODIFIED_CHART_TGZ=$(ls /tmp/jfrog-platform-*.tgz)
+          echo "Modified chart package: $MODIFIED_CHART_TGZ"
+          
+          # Install using the modified local chart
+          helm upgrade --install jfrog-platform $MODIFIED_CHART_TGZ \
+            --set global.masterKey=$MASTER_KEY \
+            --set global.joinKey=$JOIN_KEY \
+            --set artifactory.artifactory.license.secret=platform-license \
+            --set artifactory.artifactory.license.dataKey=platform.cluster.license \
+            --set artifactory.nginx.service.ssloffload=true \
+            --set artifactory.artifactory.persistence.size=50Gi \
+            --set postgresql.primary.persistence.size=500Gi \
+            --set postgresql.primary.resourcesPreset=medium \
+            --set catalog.enabled=true \
+            # --set artifactory.nginx.service.loadBalancerSourceRanges="{$WHITELIST_CIDR}" \
+          echo "Waiting for JFrog Platform services roll out"
+          kubectl rollout status statefulset/jfrog-platform-postgresql
+          kubectl rollout status statefulset/jfrog-platform-rabbitmq
+          kubectl rollout status statefulset/jfrog-platform-artifactory
+          kubectl rollout status deployment/jfrog-platform-artifactory-nginx
+          kubectl rollout status statefulset/jfrog-platform-xray
+          kubectl rollout status deployment/jfrog-platform-catalog
+          SERVICE_IP=$(kubectl get svc --namespace default jfrog-platform-artifactory-nginx -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
           JFROG_URL=http://$SERVICE_IP
           echo "JFROG_URL=$JFROG_URL" >> "$GITHUB_ENV"
-          echo "JFrog URL: $JFROG_URL"
+          echo "JFrog Platform URL: $JFROG_URL"
       - name: Get access token
         id: get_access_token
         run: |
@@ -134,21 +223,7 @@ jobs:
             --header "cookie: ACCESSTOKEN=${ACCESSTOKEN}; REFRESHTOKEN=${REFRESHTOKEN}")
           echo "::add-mask::$JFROG_ACCESS_TOKEN"
           echo "JFROG_ACCESS_TOKEN=$JFROG_ACCESS_TOKEN" >> "$GITHUB_ENV"
-      - name: Install Xray
-        id: install_xray
-        run: |
-          helm upgrade --install xray jfrog/xray \
-            --version $XRAY_HELM_CHART_VERSION \
-            --set postgresql.primary.persistence.size=200Gi \
-            --set xray.jfrogUrl=http://artifactory-artifactory-nginx \
-            --set xray.masterKey=$MASTER_KEY \
-            --set xray.joinKey=$JOIN_KEY \
-            --set xray.serviceAccount.create=true \
-            --set xray.rbac.create=true \
-            --set rabbitmq.auth.password=${{ secrets.RABBITMQ_AUTH_PASSWORD }}
-          kubectl rollout status statefulset/xray-postgresql
-          kubectl rollout status statefulset/xray-rabbitmq
-          kubectl rollout status statefulset/xray
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -235,13 +310,15 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
       - name: Update CHANGELOG and push commit
         env:
+          PLATFORM_VERSION: ${{ needs.acceptance-tests-matrix.outputs.platform_version }}
           ARTIFACTORY_VERSION: ${{ needs.acceptance-tests-matrix.outputs.artifactory_version }}
           XRAY_VERSION: ${{ needs.acceptance-tests-matrix.outputs.xray_version }}
+          CATALOG_VERSION: ${{ needs.acceptance-tests-matrix.outputs.catalog_version }}
           TERRAFORM_VERSION: ${{ needs.acceptance-tests-matrix.outputs.tf_version }}
           OPENTOFU_VERSION: ${{ needs.acceptance-tests-matrix.outputs.tofu_version }}
         run: |
-          echo "Adding Artifactory version to CHANGELOG.md"
-          sed -i -E "0,/(##\s.+\..+\..+\s\(.+\)).*/ s/(##\s.+\..+\..+\s\(.+\)).*/\1. Tested on Artifactory $ARTIFACTORY_VERSION and Xray $XRAY_VERSION with Terraform $TERRAFORM_VERSION and OpenTofu $OPENTOFU_VERSION/" CHANGELOG.md
+          echo "Adding JFrog Platform version to CHANGELOG.md"
+          sed -i -E "0,/(##\s.+\..+\..+\s\(.+\)).*/ s/(##\s.+\..+\..+\s\(.+\)).*/\1. Tested on JFrog Platform $PLATFORM_VERSION (Artifactory $ARTIFACTORY_VERSION, Xray $XRAY_VERSION, Catalog $CATALOG_VERSION) with Terraform $TERRAFORM_VERSION and OpenTofu $OPENTOFU_VERSION/" CHANGELOG.md
           head -10 CHANGELOG.md
           git add CHANGELOG.md
           export REGEX="Changes to be committed*"
@@ -252,10 +329,10 @@ jobs:
             git config --global user.email 'jfrog-solutions-ci+1@jfrog.com'
             git config --get user.name
             git config --get user.email
-            git commit --author="JFrog CI <jfrog-solutions-ci+1@jfrog.com>" -m "JFrog Pipelines - Add Artifactory version to CHANGELOG.md"
+            git commit --author="JFrog CI <jfrog-solutions-ci+1@jfrog.com>" -m "JFrog Pipelines - Add JFrog Platform version to CHANGELOG.md"
             git push
           else
-            echo "There is nothing to commit: Artifactory version hadn't changed."
+            echo "There is nothing to commit: JFrog Platform version hadn't changed."
           fi
       - name: Send workflow status to Slack
         uses: slackapi/slack-github-action@v1.26.0
